1. Page widget addressable by class rather than input type 2. Bottom page control in caption rather than tfoot to stop column wrapping

--- a/css/d3table.css
+++ b/css/d3table.css
@@ -119,3 +119,8 @@ span.d3table-pageInput:after {
 	display: flex;
 	flex-direction: column;
 }
+
+TABLE.d3table caption {
+    caption-side: bottom;
+    text-align: left;
+}
